--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
 .elementor-element.e-con-full.e-grid.e-con {
     padding: 0px;
 }
-
+.stm-gap-0 {
+    gap: 0px;
+}
 .error404 .text-general-white a {
     --tw-text-opacity: 1;
     color: black;
