--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@
 .elementor-element.e-con-full.e-grid.e-con {
     padding: 0px;
 }
-.stm-gap-0 {
-    gap: 0px;
+body .stm-gap-0 {
+    gap: 0px ;
 }
 .error404 .text-general-white a {
     --tw-text-opacity: 1;
